--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.digitalstate.camunda.deployment</groupId>
+    <groupId>com.github.StephenOTT</groupId>
     <artifactId>camunda-deployment-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>0.5-SNAPSHOT</version>
+    <version>v0.5</version>
     <name>Camunda BPM Deployment Maven Plugin</name>
     <url>http://github.com/stephenott/camunda-deployment-maven-plugin</url>
 
@@ -48,9 +48,9 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>io.digitalstate.camunda.deployment</groupId>
+                <groupId>com.github.StephenOTT</groupId>
                 <artifactId>camunda-deployment-maven-plugin</artifactId>
-                <version>0.5-SNAPSHOT</version>
+                <version>v0.5</version>
                 <!--<configuration>-->
                     <!--<host>http://localhost:8081</host>-->
                     <!--<apiPath>/engine-rest</apiPath>-->
