Update to ensure hidden files are not deployed

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,8 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 
+
+.classpath
+.factorypath
+.project
+.settings/
